--- a/index.css
+++ b/index.css
@@ -7,3 +7,15 @@ body {
     justify-content: center;
     align-items: center;
 }
+.output {
+    display:flex;
+    justify-content: center;
+    width:100%;
+    padding:0 2rem;
+}
+.number-k {
+
+}
+.render {
+    order:4;
+}
