--- a/index.css
+++ b/index.css
@@ -7,11 +7,13 @@ body {
     justify-content: center;
     padding:1rem;
     align-items: flex-start;
+ 
 }
 .output {
     width:100vw;
     display:grid;
-    grid-template-columns: repeat(7,200px);
+    grid-template-columns: repeat(8,200px);
+
     margin-top:2rem;
 }
 
@@ -24,4 +26,26 @@ div {
 }
 .title {
     font-weight:900;
+}
+span {
+    font-weight: bold;
+    text-transform: uppercase;
+    background:yellow;
+}
+.r {
+    color:blue;
+}
+.k {
+    color:red;
+}
+li {
+    margin-bottom:5px 0;
+}
+.number-vil {
+    background:yellow;
+   
+}
+.vil {
+    visibility: hidden;
+    
 }
